  checking out the development copy of the source code from the Vampire
  source code repository directly.


Changes in Vampire 1.8
======================

- Raise exceptions when the Python code file nominated in the Vampire
  configuration file as holding a handler doesn't exist, or if the file
  exists but no such handler is contained in the file.


Changes in Vampire 1.7
======================

- Special meaning of default section, ie., "DEFAULT", as implemented by
  original Python ConfigParser class wasn't being honoured by Vampire
  configuration system. This has now been fixed, and variables which need
  to be referenced through interpolation in multiple sections, can be
  placed in the "DEFAULT" section.

- Added mechanism whereby Python import mechanism is partly overridden
  such that although the standard Python "import" statement is used, under
  the covers, the Vampire import mechanism is used to load a module.

  Note though that this support only extends as far as file based modules
  and not to full blown packages. Python doesn't seem to be able to support
  packages which live totally outside of sys.modules.

  The result of this feature is that file based module imports at global
  scope in a module containing a handler, instead of being written as::

    import os
    import vampire
    directory = os.path.split(__file__)[0]
    mymodule = vampire.importModule("mymodule",directory,__req__)

  can be written in more traditional form of::

    import mymodule

  Because the Vampire import mechanism is actually being used, a change in
  the imported module will automatically result in the handler module being
  reimported as necessary when a request arrives, even though the handler
  module itself wasn't changed.

  To enable this feature it is necessary to enable it within the Apache
  configuration by using the "PythonOption" directive to set the
  "VampireImportHooks" option to "On"::

    PythonOption VampireImportHooks On
